# nuvio-desktop

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SETUP_API_KEYS.md  index.html  mpv.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bump-version.js  extract-all-texts.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: addon.rs  discord_rpc.rs  downloader.rs  lib.rs  main.rs  main.rs.bak  mpv.rs  mpv_lib.rs  mpv_native.rs  player_context.rs  proxy.rs  streamer.rs
src-tauri/src/plugin/: ipc.rs  ipc.ts  mod.rs  repository.rs  runtime.rs  scraper.rs
src/api/: mal.ts  nuvio.ts  pluginService.ts  rpdb.ts  simkl.ts  stremio.ts  tmdb.ts  trakt.ts
src/components/: CatalogRow.tsx  DiscordRPCProvider.tsx  MetaCard.tsx  PlayerBar.tsx  Sidebar.tsx  StreamPicker.tsx  VideoPlayer.tsx
src/hooks/: useCatalog.ts  useContinueWatching.ts  useDiscordRPC.ts  useNativeMpv.ts  useNuvioSync.ts  usePlayer.ts  usePluginMpv.ts  useStreams.ts
src/lib/: addon-client.ts  config.ts  contextMenu.ts  googleTranslate.ts  i18n.ts  storage.ts  store.ts  torrent.ts  types.ts  webtorrent.d.ts
src/pages/: Addons.tsx  CatalogPage.tsx  Detail.tsx  Discover.tsx  Home.tsx  LanguageSetup.tsx  Library.tsx  MetaDetail.tsx  PersonDetail.tsx  PluginsPage.tsx  ProfileSelect.tsx  Search.tsx  Settings.tsx  Streaming.tsx  Testing.tsx
src/store/: index.ts
src/types/: index.ts
