[package]
name = "nuvio-desktop"
version = "2.3.1"
description = "Nuvio Desktop"
authors = []
edition = "2021"

[lib]
name = "nuvio_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "nuvio-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "blocking"] }
anyhow = "1"
urlencoding = "2"
rquickjs = "0.5"
chrono = "0.4"
sha2 = "0.10"
md5 = "0.7"
hmac  = "0.12"
hex   = "0.4"
hyper = { version = "1", features = ["server", "http1", "client"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
windows = "0.52"
windows-sys = "0.48"
libmpv = { git = "https://github.com/paradoxspiral/libmpv-rs", features = ["render"] }


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
